# package-version-bumper

./: .gitignore  .rusty-hook.toml  Cargo.toml  LICENSE  README.md  package.json  rusty-hook.toml
src/: gitops.rs  main.rs  version.rs  versioning.rs
