[package]
name = "pvb"
version = "0.1.0"
edition = "2018"

[dependencies]
serde_json = "1.0"
clap = "3.0"
regex = "1.5.4"
git2 = "0.18.2"
serde = { version = "1.0.197", features = ["derive"] }
anyhow = "1.0.80"
log = "0.4.21"
env_logger = "0.11.3"
toml = "0.8.11"

[dev-dependencies]
rusty-hook = "^0.11.2"
