[package]
name = "vup-rs"
version = "0.1.0"
edition = "2018"
description = "CLI tool to bump package versions in Cargo.toml and package.json."
license = "MIT"
readme = "README.md"
repository = "https://github.com/dan-alin/package-version-bumper.git"
homepage = "https://github.com/dan-alin/package-version-bumper"
keywords = ["version", "bump", "semver", "cli", "release"]
categories = ["development-tools::build-utils", "command-line-utilities"]

[[bin]]
name = "vup"
path = "src/main.rs"

[dependencies]
serde_json = "1.0"
clap = "3.0"
regex = "1.5.4"
git2 = "0.18.2"
serde = { version = "1.0.197", features = ["derive"] }
anyhow = "1.0.80"
log = "0.4.21"
env_logger = "0.11.3"
toml = "0.8.11"

[dev-dependencies]
rusty-hook = "^0.11.2"
