[package]
version = "0.2.0"
categories = [
    "development-tools::build-utils",
    "command-line-utilities",
]
description = "CLI tool to bump package versions in Cargo.toml and package.json."
edition = "2018"
homepage = "https://github.com/dan-alin/package-version-bumper"
keywords = [
    "version",
    "bump",
    "semver",
    "cli",
    "release",
]
license = "MIT"
name = "vup-rs"
readme = "README.md"
repository = "https://github.com/dan-alin/package-version-bumper.git"

[[bin]]
name = "vup"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.80"
clap = "3.0"
env_logger = "0.11.3"
git2 = "0.18.2"
log = "0.4.21"
regex = "1.5.4"
serde_json = "1.0"
toml = "0.8.11"

[dependencies.serde]
features = ["derive"]
version = "1.0.197"

[dev-dependencies]
rusty-hook = "^0.11.2"
